--- a/Makefile.in
+++ b/Makefile.in
@@ -56,7 +56,7 @@ install: all
 	-chmod a+x $(prefix)
 	-chmod a+x $(prefix)/roxen
 	-chmod a+x $(prefix)/roxen/server
-	-@for d in fonts nfonts modules etc bin base_rserver more_modules \
+	-@for d in fonts nfonts modules etc bin base_server more_modules \
 	           languages roxen-images protocols unfinishedmodules; do \
 	  echo Modifying permissions for directory $(prefix)/roxen/server/$$d... ; \
 	  find $(prefix)/roxen/server/$$d -type d -exec chmod a+x '{}' \; ; \
