Restricted filesystem for ftp.
Rev: server/modules/filesystems/restrictedfs.pike:1.1

--- a/.gitattributes
+++ b/.gitattributes
@@ -91,6 +91,7 @@ urw_itc_avant_garde-demi-r binary
 /server/modules/examples/fnord.pike foreign_ident
 /server/modules/filesystems/cvsfs.pike foreign_ident
 /server/modules/filesystems/filesystem.pike foreign_ident
+/server/modules/filesystems/restrictedfs.pike foreign_ident
 /server/modules/filesystems/secure_fs.pike foreign_ident
 /server/modules/filesystems/userfs.pike foreign_ident
 /server/modules/filters/auto_gzip.pike foreign_ident
