--- a/.gitattributes
+++ b/.gitattributes
@@ -132,6 +132,10 @@ urw_itc_avant_garde-demi-r binary
 /server/protocols/gopher.pike foreign_ident
 /server/protocols/http.pike foreign_ident
 /server/protocols/ssl3.pike foreign_ident
+/server/server_templates/bare.pike foreign_ident
+/server/server_templates/ftp.pike foreign_ident
+/server/server_templates/ipp.pike foreign_ident
+/server/server_templates/proxy.pike foreign_ident
 /server/server_templates/standard.pike foreign_ident
 /server/unfinishedmodules/deepthought.pike foreign_ident
 /server/unfinishedmodules/hedbor.pike foreign_ident
