--- a/Makefile.in
+++ b/Makefile.in
@@ -46,6 +46,7 @@ install: all
 	@rm -rf	$(prefix)/roxen/server/CVS $(prefix)/roxen/server/*/CVS\
 		$(prefix)/roxen/server/*/*/CVS
 	cp pike/src/pike $(prefix)/roxen/server/bin
+	ln $(prefix)/roxen/server/bin/pike $(prefix)/roxen/server/bin/roxen
 	cp $(SRCDIR)/pike/bin/feature_list $(prefix)/roxen/server/bin
 	test -d $(prefix)/roxen/server/lib || mkdir $(prefix)/roxen/server/lib
 	test -d $(prefix)/roxen/server/lib/pike || mkdir $(prefix)/roxen/server/lib/pike
@@ -70,6 +71,7 @@ install_pike: all
 
 localinstall: all
 	cp pike/src/pike $(SRCDIR)/server/bin/
+	ln $(SRCDIR)/server/bin/pike $(SRCDIR)/server/bin/roxen
 	(cd extern; $(MAKE) localinstall)
 
 spotless:  clean
