--- a/.gitattributes
+++ b/.gitattributes
@@ -113,6 +113,7 @@ urw_itc_avant_garde-demi-r binary
 /server/modules/logging/home_logger.pike foreign_ident
 /server/modules/logging/nologging.pike foreign_ident
 /server/modules/misc/contenttypes.pike foreign_ident
+/server/modules/misc/ip-less_hosts.pike foreign_ident
 /server/modules/misc/ismap.pike foreign_ident
 /server/modules/misc/language.pike foreign_ident
 /server/modules/misc/userdb.pike foreign_ident
