--- a/Makefile.in
+++ b/Makefile.in
@@ -5,9 +5,13 @@ prefix=@prefix@
 
 @SET_MAKE@
 
-all:	extern pike
-	@(cd extern;$(MAKE) all)
+all:	pike extern
 	@(cd pike/src;$(MAKE))
+	@(cd extern;$(MAKE) all)
+
+# These are here for compatibility with the easy-start makefile
+easy: all
+hard: all
 
 depend:
 	@(cd pike/src;$(MAKE) depend)
@@ -25,8 +29,8 @@ new_peep_engine:
 check: verify
 
 clean:
-	@(cd extern;$(MAKE) clean)
 	@(cd pike/src;$(MAKE) clean)
+	@(cd extern;$(MAKE) clean)
 
 install_all: install_pike install
 
@@ -51,6 +55,9 @@ install: all
 	test -d $(prefix)/roxen/server/lib || mkdir $(prefix)/roxen/server/lib
 	test -d $(prefix)/roxen/server/lib/pike || mkdir $(prefix)/roxen/server/lib/pike
 	cp -r pike/src/lib/* $(prefix)/roxen/server/lib/pike/
+	test -d $(prefix)/roxen/server/include || mkdir $(prefix)/roxen/server/include
+	test -d $(prefix)/roxen/server/include/pike || mkdir $(prefix)/roxen/server/include/pike
+	for a in $(SRCDIR)/pike/src/*.h ./pike/src/*.h; do $(INSTALL) $$a $(prefix)/roxen/server/include/pike; done
 	-@(cd extern;$(MAKE) install;cd ../)
 	-@$(SRCDIR)/mkdir -p $(prefix)/roxen/logs
 	-@$(SRCDIR)/mkdir -p $(prefix)/roxen/configurations
