--- a/.gitattributes
+++ b/.gitattributes
@@ -19,6 +19,7 @@ urw_itc_avant_garde-demi-r binary
 # Remove the corresponding line before committing
 # changes to these files.
 /Makefile foreign_ident
+/configure.in foreign_ident
 /extern/fast_cgi/Makefile.in foreign_ident
 /extern/fast_cgi/README foreign_ident
 /extern/fast_cgi/cgi-fcgi/Makefile.in foreign_ident
