--- a/configure.in
+++ b/configure.in
@@ -1,5 +1,5 @@
 #
-# $Id: configure.in,v 1.3 1997/08/18 02:55:30 grubba Exp $
+# $Id: configure.in,v 1.4 1997/08/18 03:24:08 grubba Exp $
 #
 
 prefix=$PWD
@@ -18,6 +18,13 @@ case "$srcdir" in
 If this does not work, please use an absolute path to the configure script. ])
     ;;
 esac
+
+# Check the arguments
+
+AC_ARG_WITH(gmp,     [  --with(out)-gmp        Support bignums],[],[with_gmp=yes])
+AC_ARG_WITH(zlib,     [  --with(out)-zlib       Support gzip compression],[],[with_zlib=yes])
+AC_ARG_WITH(gdbm,    [  --with(out)-gdbm       GNU database manager support ],[],[with_gdbm=yes])
+
 
 # Set some of the compiler flags.
 
@@ -211,22 +218,22 @@ fi
 MAKE_GMP=""
 AC_SUBST(MAKE_GMP)
 if test -d $srcdir/gmp/.; then
+  ac_cv_header_gmp_h=""
   if test x$with_gmp = xyes; then
     AC_CHECK_HEADERS(gmp.h)
-  fi
-  if test "$ac_cv_header_gmp_h" = "yes"; then
-    echo Gmp already installed.
-  else
-    echo Configuring gmp...
-    AC_CONFIG_SUBDIRS(gmp)
-    MAKE_GMP=gmp
-    # Fool Pike into believing Gmp is installed.
-    # It will be when Pike is being built.
-    ac_cv_header_gmp_h=yes
-    ac_cv_lib_gmp_mpz_set_d=yes
-    PWD=`pwd`
-    CPPFLAGS="${CPPFLAGS} -I$srcdir/gmp -I$PWD/gmp"
-    LDFLAGS="${LDFLAGS} -L$PWD/gmp"
+    if test "$ac_cv_header_gmp_h" = "yes"; then
+      echo Gmp already installed.
+    else
+      echo Configuring gmp...
+      MAKE_GMP=gmp
+      # Fool Pike into believing Gmp is installed.
+      # It will be when Pike is being built.
+      ac_cv_header_gmp_h=yes
+      ac_cv_lib_gmp_mpz_set_d=yes
+      PWD=`pwd`
+      CPPFLAGS="${CPPFLAGS} -I$srcdir/gmp -I$PWD/gmp"
+      LDFLAGS="${LDFLAGS} -L$PWD/gmp"
+    fi
   fi
 fi
 
@@ -236,22 +243,22 @@ fi
 MAKE_ZLIB=""
 AC_SUBST(MAKE_ZLIB)
 if test -d zlib/.; then
+  ac_cv_header_gmp_h=""
   if test x$with_zlib = xyes; then
     AC_CHECK_HEADERS(zlib.h)
-  fi
-  if test "$ac_cv_header_zlib_h" = "yes"; then
-    echo Zlib already installed.
-  else
-    echo Configuring zlib...
-    AC_CONFIG_SUBDIRS(zlib)
-    MAKE_ZLIB=zlib
-    # Fool Pike into believing Zlib is installed.
-    # It will be when Pike is being built.
-    ac_cv_header_zlib_h=yes
-    ac_cv_lib_z_compress=yes
-    PWD=`pwd`
-    CPPFLAGS="${CPPFLAGS} -I$srcdir/zlib -I$PWD/zlib"
-    LDFLAGS="${LDFLAGS} -L$PWD/zlib"
+    if test "$ac_cv_header_zlib_h" = "yes"; then
+      echo Zlib already installed.
+    else
+      echo Configuring zlib...
+      MAKE_ZLIB=zlib
+      # Fool Pike into believing Zlib is installed.
+      # It will be when Pike is being built.
+      ac_cv_header_zlib_h=yes
+      ac_cv_lib_z_compress=yes
+      PWD=`pwd`
+      CPPFLAGS="${CPPFLAGS} -I$srcdir/zlib -I$PWD/zlib"
+      LDFLAGS="${LDFLAGS} -L$PWD/zlib"
+    fi
   fi
 fi
 
@@ -261,26 +268,27 @@ fi
 MAKE_GDBM=""
 AC_SUBST(MAKE_GDBM)
 if test -d gdbm/.; then
+  ac_cv_header_gdbm_h=""
   if test x$with_gdbm = xyes; then
     AC_CHECK_HEADERS(gdbm.h)
-  fi
-  if test "$ac_cv_header_gdbm_h" = "yes"; then
-    echo Gdbm already installed.
-  else
-    echo Configuring gdbm...
-    AC_CONFIG_SUBDIRS(gdbm)
-    MAKE_GDBM=gdbm
-    # Fool Pike into believing Gdbm is installed.
-    # It will be when Pike is being built.
-    ac_cv_header_gdbm_h=yes
-    ac_cv_lib_gdbm_gdbm_open=yes
-    PWD=`pwd`
-    CPPFLAGS="${CPPFLAGS} -I$srcdir/gdbm -I$PWD/gdbm"
-    LDFLAGS="${LDFLAGS} -L$PWD/gdbm"
+    if test "$ac_cv_header_gdbm_h" = "yes"; then
+      echo Gdbm already installed.
+    else
+      echo Configuring gdbm...
+      MAKE_GDBM=gdbm
+      # Fool Pike into believing Gdbm is installed.
+      # It will be when Pike is being built.
+      ac_cv_header_gdbm_h=yes
+      ac_cv_lib_gdbm_gdbm_open=yes
+      PWD=`pwd`
+      CPPFLAGS="${CPPFLAGS} -I$srcdir/gdbm -I$PWD/gdbm"
+      LDFLAGS="${LDFLAGS} -L$PWD/gdbm"
+    fi
   fi
 fi
 
+export CPPFLAGS CFLAGS LDFLAGS
 
-AC_CONFIG_SUBDIRS(extern pike)
+AC_CONFIG_SUBDIRS(gmp zlib gdbm extern pike)
 AC_OUTPUT(Makefile, echo foo >stamp-h)
 
