--- a/configure.in
+++ b/configure.in
@@ -1,5 +1,5 @@
 #
-# $Id: configure.in,v 1.6 1997/08/18 14:46:24 grubba Exp $
+# $Id: configure.in,v 1.7 1997/08/18 20:12:38 grubba Exp $
 #
 
 prefix=$PWD
@@ -243,7 +243,7 @@ fi
 MAKE_ZLIB=""
 AC_SUBST(MAKE_ZLIB)
 if test -d zlib/.; then
-  unset ac_cv_header_gmp_h
+  unset ac_cv_header_zlib_h
   if test x$with_zlib = xyes; then
     AC_CHECK_HEADERS(zlib.h)
     if test "$ac_cv_header_zlib_h" = "yes"; then
