--- a/.gitattributes
+++ b/.gitattributes
@@ -76,6 +76,7 @@ urw_itc_avant_garde-demi-r binary
 /server/config_actions/reloadmoduledb.pike foreign_ident
 /server/config_actions/reloaduserdb.pike foreign_ident
 /server/config_actions/shutdown.pike foreign_ident
+/server/config_actions/upgrade.pike foreign_ident
 /server/etc/extensions foreign_ident
 /server/etc/roxen_master.pike foreign_ident
 /server/etc/supports foreign_ident
