--- a/.gitattributes
+++ b/.gitattributes
@@ -66,6 +66,7 @@ urw_itc_avant_garde-demi-r binary
 /server/base_server/socket.pike foreign_ident
 /server/base_server/spinnerlib.pike foreign_ident
 /server/base_server/struct/node.pike foreign_ident
+/server/base_server/wizard.pike foreign_ident
 /server/bin/garbagecollector.pike foreign_ident
 /server/bin/install.pike foreign_ident
 /server/config_actions/changepass.pike foreign_ident
