--- a/.gitattributes
+++ b/.gitattributes
@@ -72,9 +72,11 @@ urw_itc_avant_garde-demi-r binary
 /server/config_actions/changepass.pike foreign_ident
 /server/config_actions/clearlog.pike foreign_ident
 /server/config_actions/openports.pike foreign_ident
+/server/config_actions/problems.pike foreign_ident
 /server/config_actions/reloadconfiginterface.pike foreign_ident
 /server/config_actions/reloadconfigurations.pike foreign_ident
 /server/config_actions/reloadmoduledb.pike foreign_ident
+/server/config_actions/reloadother.pike foreign_ident
 /server/config_actions/reloaduserdb.pike foreign_ident
 /server/config_actions/shutdown.pike foreign_ident
 /server/config_actions/upgrade.pike foreign_ident
