shuffle only works on Solaris 2.4 and 2.5.
Rev: extern/configure.in:1.15

--- a/extern/configure.in
+++ b/extern/configure.in
@@ -111,7 +111,7 @@ AC_CACHE_VAL(lpc_cv_shuffle, [
       case "`uname -m`" in
         sun4*)
 	  case "`uname -r`" in
-	    5.*) lpc_cv_shuffle="shuffle" ;;
+	    5.[45]*) lpc_cv_shuffle="shuffle" ;;
 	  esac
         ;;
       esac
