--- a/.gitattributes
+++ b/.gitattributes
@@ -87,8 +87,11 @@ urw_itc_avant_garde-demi-r binary
 /server/config_actions/shutdown.pike foreign_ident
 /server/config_actions/upgrade.pike foreign_ident
 /server/etc/extensions foreign_ident
+/server/etc/restart.html foreign_ident
 /server/etc/roxen_master.pike foreign_ident
+/server/etc/shutdown.html foreign_ident
 /server/etc/supports foreign_ident
+/server/etc/welcome.html foreign_ident
 /server/languages/catala.pike foreign_ident
 /server/languages/croatian.pike foreign_ident
 /server/languages/dutch.pike foreign_ident
