--- a/configure.in
+++ b/configure.in
@@ -1,5 +1,5 @@
 #
-# $Id: configure.in,v 1.10 1997/08/30 21:57:40 grubba Exp $
+# $Id: configure.in,v 1.11 1997/08/30 22:03:24 grubba Exp $
 #
 
 prefix=$PWD
@@ -196,6 +196,13 @@ AC_DEFUN(AC_SYS_COMPILER_FLAG,
 AC_DEFUN(AC_SYS_CPU_COMPILER_FLAG,
 [
  if test "`uname -m 2>/dev/null`" = "$1" ; then
+    AC_SYS_COMPILER_FLAG($2,$3)
+ fi
+])
+
+AC_DEFUN(AC_SYS_OS_COMPILER_FLAG,
+[
+ if test "x$roxen_cv_sys_os" = "x$1" ; then
     AC_SYS_COMPILER_FLAG($2,$3)
  fi
 ])
