--- a/extern/configure.in
+++ b/extern/configure.in
@@ -15,7 +15,8 @@ AC_HEADER_DIRENT
 AC_HEADER_STDC
 
 AC_CHECK_HEADERS(unistd.h stdlib.h stropts.h poll.h malloc.h arpa/inet.h \
-		 linux/mman.h sys/mman.h sys/lock.h sys/resource.h sys/param.h)
+		 linux/mman.h sys/mman.h sys/lock.h sys/resource.h \
+		 sys/wait.h sys/param.h)
 
 AC_MSG_CHECKING(existance of h_errno)
 AC_CACHE_VAL(pike_cv_h_errno, [
