--- a/configure.in
+++ b/configure.in
@@ -1,5 +1,5 @@
 #
-# $Id: configure.in,v 1.15 1997/08/31 00:02:45 grubba Exp $
+# $Id: configure.in,v 1.16 1997/08/31 22:58:06 grubba Exp $
 #
 
 prefix=$PWD
@@ -217,9 +217,11 @@ OPTIMIZE=""
 
 if test $cflags_is_set = no; then
  if test "x${GCC-}" = xyes ; then
-  WARN="-W -Wall -Wpointer-arith -Wno-unused"
+  WARN="-W -Wall -Wpointer-arith -Wno-unused -Wstrict-prototypes"
 ### Optimize for different SUN machines. If there is no working 'uname'
 ### no extra optimization will be done, but nothing should break either.
+  AC_SYS_COMPILER_FLAG(-ffast-math,ffast-math)
+  AC_SYS_OS_COMPILER_FLAG(AIX,-mprototype,mprototype)
   AC_SYS_CPU_COMPILER_FLAG(sun4c,-msparclite,sparclite)
   AC_SYS_CPU_COMPILER_FLAG(sun4m,-mv8,microsparc)
   AC_SYS_CPU_COMPILER_FLAG(sun4d,-msupersparc,supersparc)
@@ -227,10 +229,15 @@ if test $cflags_is_set = no; then
  else
 
 ### Non-gcc thingies. This should probably be enhanced...
-  AC_SYS_COMPILER_FLAG(-fast,fast)
-  AC_SYS_COMPILER_FLAG(+Odataprefetch,odataprefetch)
-  AC_SYS_COMPILER_FLAG(+Ofailsafe,ofailsafe)
-  AC_SYS_COMPILER_FLAG(+O4,o4)
+
+  # HP-UX
+  AC_SYS_OS_COMPILER_FLAG(HP-UX,+Odataprefetch,plus_odataprefetch)
+  AC_SYS_OS_COMPILER_FLAG(HP-UX,+Ofailsafe,plus_ofailsafe)
+  AC_SYS_OS_COMPILER_FLAG(HP-UX,+O3,plus_o3)
+  AC_SYS_OS_COMPILER_FLAG(HP-UX,+w1,plus_w1)
+
+  # OSF/1
+  AC_SYS_OS_COMPILER_FLAG(OSF1,-fast,fast)
   AC_SYS_OS_COMPILER_FLAG(OSF1,-g3,g3)
   AC_SYS_OS_COMPILER_FLAG(OSF1,-std,std)
   AC_SYS_OS_COMPILER_FLAG(OSF1,-host,host)
@@ -254,8 +261,9 @@ esac
   AC_SYS_CPU_COMPILER_FLAG(sun4d,-Xpipe=super,supersparc)
   AC_SYS_CPU_COMPILER_FLAG(sun4u,-Xpipe=super,ultrasparc)
 
-  case "${CFLAGS-}" in
+  case "${CFLAGS-} $OPTIMIZE" in
      *-O*) ;;
+     *+O*) ;;
      *)
       AC_SYS_COMPILER_FLAG(-O,O)
      ;;
