Fixed threads, Roxen is now usable with threads enabled. Also disabled the building of the shuffle program.
Rev: CHANGES:1.80
Rev: extern/Makefile.in:1.12
Rev: server/base_server/neighborhood.pike:1.18
Rev: server/modules/filesystems/mirrorfs.pike:1.8
Rev: server/modules/misc/mirrorserver.pike:1.5
Rev: tools/xdumpfont/Makefile:1.3
Rev: tools/xdumpfont/makefonts.lpc:1.6

--- a/extern/Makefile.in
+++ b/extern/Makefile.in
@@ -16,9 +16,9 @@ OTHERFLAGS=@CFLAGS@
 CFLAGS=-g @DEFS@ $(PREFLAGS) $(OTHERFLAGS)
 PREFLAGS=-I. -I$(SRCDIR) -I$(SRCDIR)/../.. -I../..
 
-all: roxen_hostname cgi $(HAVE_SHUFFLE) fcgi
+all: roxen_hostname cgi fcgi
 
-pure: purerecgi pureshuffle roxen_hostname
+pure: purerecgi roxen_hostname
 
 no: 
 none:
@@ -59,7 +59,7 @@ shuffle-localinstall: shuffle
 	-/bin/rm -f $(SRCDIR)/../server/bin/shuffle
 	/bin/cp shuffle $(SRCDIR)/../server/bin
 
-install: roxen_hostname fcgi cgi $(HAVE_SHUFFLE)-install
+install: roxen_hostname fcgi cgi
 	@for f in roxen_hostname fcgi cgi; do \
 		echo Installing $$f...; \
 		/bin/rm -f $(prefix)/roxen/server/bin/$$f; \
@@ -69,7 +69,7 @@ install: roxen_hostname fcgi cgi $(HAVE_SHUFFLE)-install
 	-@ln -s $(prefix)/roxen/server/bin/cgi $(prefix)/roxen/server/bin/cgi-bin
 	@echo Done.
 
-localinstall: fcgi roxen_hostname cgi $(HAVE_SHUFFLE)-localinstall
+localinstall: fcgi roxen_hostname cgi
 	@for f in fcgi roxen_hostname cgi; do \
 		echo Installing $$f...; \
 		/bin/rm -f $(SRCDIR)/../server/bin/$$f; \
