--- a/.gitattributes
+++ b/.gitattributes
@@ -77,6 +77,7 @@ urw_itc_avant_garde-demi-r binary
 /server/config_actions/flush.pike foreign_ident
 /server/config_actions/ftpstatus.pike foreign_ident
 /server/config_actions/hostnames.pike foreign_ident
+/server/config_actions/listfonts.pike foreign_ident
 /server/config_actions/network_neighborhood.pike foreign_ident
 /server/config_actions/openfiles.pike foreign_ident
 /server/config_actions/openports.pike foreign_ident
