--- a/configure.in
+++ b/configure.in
@@ -1,5 +1,5 @@
 #
-# $Id: configure.in,v 1.17 1997/08/31 23:03:32 grubba Exp $
+# $Id: configure.in,v 1.18 1997/09/06 23:40:30 grubba Exp $
 #
 
 prefix=$PWD
@@ -232,9 +232,9 @@ if test $cflags_is_set = no; then
 ### Non-gcc thingies. This should probably be enhanced...
 
   # HP-UX
-  AC_SYS_OS_COMPILER_FLAG(HP-UX,+Odataprefetch,plus_odataprefetch)
-  AC_SYS_OS_COMPILER_FLAG(HP-UX,+Ofailsafe,plus_ofailsafe)
-  AC_SYS_OS_COMPILER_FLAG(HP-UX,+O3,plus_o3)
+  AC_SYS_OS_COMPILER_FLAG(HP-UX,+Odataprefetch,plus_Odataprefetch)
+  AC_SYS_OS_COMPILER_FLAG(HP-UX,+Ofailsafe,plus_Ofailsafe)
+  AC_SYS_OS_COMPILER_FLAG(HP-UX,+O3,plus_O3)
   AC_SYS_OS_COMPILER_FLAG(HP-UX,+w1,plus_w1)
 
   # OSF/1
@@ -243,6 +243,15 @@ if test $cflags_is_set = no; then
   AC_SYS_OS_COMPILER_FLAG(OSF1,-std,std)
   AC_SYS_OS_COMPILER_FLAG(OSF1,-host,host)
   AC_SYS_OS_COMPILER_FLAG(OSF1,-warnprotos,warnprotos)
+
+  # IRIX
+  AC_SYS_OS_COMPILER_FLAG(IRIX,-sopt,sopt)
+  AC_SYS_OS_COMPILER_FLAG(IRIX,-g3,g3)
+  AC_SYS_OS_COMPILER_FLAG(IRIX,-fullwarn,fullwarn)
+  if test x$with_debug = xyes ; then
+    AC_SYS_OS_COMPILER_FLAG(IRIX,-trapuw,trapuw)
+  fi
+
 dnl
 dnl This does not work with Digital UNIX cc/ld (cc thinks it is ok, ld does not)
 dnl  
@@ -265,8 +274,12 @@ esac
   case "${CFLAGS-} $OPTIMIZE" in
      *-O*) ;;
      *+O*) ;;
+     *-fast*) ;;
      *)
-      AC_SYS_COMPILER_FLAG(-O,O)
+      AC_SYS_COMPILER_FLAG(-O2,O2)
+      if test "x$pike_cv_option_O2" != "xyes"; then
+        AC_SYS_COMPILER_FLAG(-O,O)
+      fi
      ;;
   esac
  fi
