--- a/extern/Makefile.in
+++ b/extern/Makefile.in
@@ -18,7 +18,7 @@ PREFLAGS=-I. -I$(SRCDIR) -I$(SRCDIR)/../.. -I../..
 
 all: roxen_hostname cgi fcgi
 
-pure: purerecgi roxen_hostname
+pure: purecgi roxen_hostname
 
 no: 
 none:
