--- a/.gitattributes
+++ b/.gitattributes
@@ -171,6 +171,7 @@ urw_itc_avant_garde-demi-r binary
 /server/server_templates/ipp.pike foreign_ident
 /server/server_templates/proxy.pike foreign_ident
 /server/server_templates/standard.pike foreign_ident
+/server/start foreign_ident
 /server/unfinishedmodules/deepthought.pike foreign_ident
 /server/unfinishedmodules/hedbor.pike foreign_ident
 /server/unfinishedmodules/mountserver.pike foreign_ident
