--- a/configure.in
+++ b/configure.in
@@ -1,5 +1,5 @@
 #
-# $Id: configure.in,v 1.18 1997/09/06 23:40:30 grubba Exp $
+# $Id: configure.in,v 1.19 1997/09/08 01:53:11 neotron Exp $
 #
 
 prefix=$PWD
@@ -220,7 +220,7 @@ if test $cflags_is_set = no; then
   WARN="-W -Wall -Wpointer-arith -Wno-unused -Wstrict-prototypes"
 ### Optimize for different SUN machines. If there is no working 'uname'
 ### no extra optimization will be done, but nothing should break either.
-  AC_SYS_COMPILER_FLAG(-ffast-math,ffast-math)
+  AC_SYS_COMPILER_FLAG(-ffast-math,ffast_math)
   AC_SYS_COMPILER_FLAG(-O2,o2)
   AC_SYS_OS_COMPILER_FLAG(AIX,-mprototype,mprototype)
   AC_SYS_CPU_COMPILER_FLAG(sun4c,-msparclite,sparclite)
