--- a/configure.in
+++ b/configure.in
@@ -1,5 +1,5 @@
 #
-# $Id: configure.in,v 1.21 1997/09/11 19:23:24 grubba Exp $
+# $Id: configure.in,v 1.22 1997/09/12 00:17:18 grubba Exp $
 #
 
 prefix=$PWD
@@ -245,7 +245,8 @@ if test $cflags_is_set = no; then
   AC_SYS_OS_COMPILER_FLAG(OSF1,-warnprotos,warnprotos)
 
   # IRIX
-  AC_SYS_OS_COMPILER_FLAG(IRIX,-sopt,sopt)
+  # sopt disabled since it takes too much time on interpret.c (>45min on an O²)
+  # AC_SYS_OS_COMPILER_FLAG(IRIX,-sopt,sopt)
   AC_SYS_OS_COMPILER_FLAG(IRIX,-g3,g3)
   AC_SYS_OS_COMPILER_FLAG(IRIX,-fullwarn,fullwarn)
   if test x$with_debug = xyes ; then
