--- a/.gitattributes
+++ b/.gitattributes
@@ -136,6 +136,7 @@ urw_itc_avant_garde-demi-r binary
 /server/modules/filters/redirect.pike foreign_ident
 /server/modules/filters/relay.pike foreign_ident
 /server/modules/graphics/graphic_text.pike foreign_ident
+/server/modules/graphics/pimage.pike foreign_ident
 /server/modules/graphics/tablist.pike foreign_ident
 /server/modules/logging/client_logger.pike foreign_ident
 /server/modules/logging/home_logger.pike foreign_ident
