--- a/configure.in
+++ b/configure.in
@@ -1,5 +1,5 @@
 #
-# $Id: configure.in,v 1.22 1997/09/12 00:17:18 grubba Exp $
+# $Id: configure.in,v 1.23 1997/09/16 01:56:51 grubba Exp $
 #
 
 prefix=$PWD
@@ -235,7 +235,8 @@ if test $cflags_is_set = no; then
   AC_SYS_OS_COMPILER_FLAG(HP-UX,+Odataprefetch,plus_Odataprefetch)
   AC_SYS_OS_COMPILER_FLAG(HP-UX,+Ofailsafe,plus_Ofailsafe)
   AC_SYS_OS_COMPILER_FLAG(HP-UX,+O3,plus_O3)
-  AC_SYS_OS_COMPILER_FLAG(HP-UX,+w1,plus_w1)
+  # Ignore warnings 530 and 414 if you turn this on.
+  # AC_SYS_OS_COMPILER_FLAG(HP-UX,+w1,plus_w1)
 
   # OSF/1
   AC_SYS_OS_COMPILER_FLAG(OSF1,-fast,fast)
