--- a/.gitattributes
+++ b/.gitattributes
@@ -100,6 +100,7 @@ urw_itc_avant_garde-demi-r binary
 /server/etc/roxen_master.pike foreign_ident
 /server/etc/shutdown.html foreign_ident
 /server/etc/supports foreign_ident
+/server/etc/upgrade_servers foreign_ident
 /server/etc/welcome.html foreign_ident
 /server/languages/catala.pike foreign_ident
 /server/languages/croatian.pike foreign_ident
